--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="20-20-20 Break Reminder - Protect your eyes with regular breaks"
+      content="20-20-20 - Protect your eyes with regular breaks"
     />
-    <title>20-20-20 Break Reminder</title>
+    <title>20-20-20</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
